--- a/lab03-scratch.Rmd
+++ b/lab03-scratch.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Untitled"
+title: "Lab 03: Simple Linear Regression"
 author: "STAT 108"
 date: "1/26/2022"
 output: html_document
@@ -7,6 +7,11 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
+library(knitr)
+library(broom)
+library(modelr)
+library(openintro)
 ```
 
 # Data: Gift aid at Elmhurst College
