Finished simple linear regression section

--- a/lab03-scratch.Rmd
+++ b/lab03-scratch.Rmd
@@ -101,46 +101,61 @@ There appears to be a negative correlation between family income and gift aid. A
 
 ## Simple Linear Regression
 
-5. Use the `lm` function to fit a simple linear regression model using `family_income` to explain variation in `gift_aid`. Complete the code below to assign your model a name, and use the `tidy` and `kable` functions to neatly display the model output. *Replace X and Y with the appropriate variable names.*
+5. 
+<!-- Use the `lm` function to fit a simple linear regression model using `family_income` to explain variation in `gift_aid`. Complete the code below to assign your model a name, and use the `tidy` and `kable` functions to neatly display the model output. *Replace X and Y with the appropriate variable names.* -->
 
-```{r eval=FALSE}
-_____ <- lm(Y ~ X, data = _____)
-tidy(_____) %>% # output model
+```{r}
+gift_model <- lm(gift_aid ~ family_income, data = elmhurst)
+tidy(gift_model) %>% # output model
   kable(digits = 3) # format model output
 ```
 
-6. Interpret the slope in the context of the problem.
+6. The slope is -0.043 for this problem. That means gift_aid goes down by 0.043 when family_income is increased by 1. gift_aid = 24.319 - 0.043*family_income
+<!-- Interpret the slope in the context of the problem. -->
 
-7. When we fit a linear regression model, we make assumptions about the underlying relationship between the response and predictor variables. In practice, we can check that the assumptions hold by analyzing the residuals. Over the next few questions, we will examine plots of the residuals to determine if the assumptions are met.
 
-Let's begin by calculating the residuals and adding them to the dataset. Fill in the model name in the code below to add residuals to the original dataset using the `resid()` and `mutate()` functions.
-
-```{r eval=FALSE}
-_____<- _____ %>%
-  mutate(resid = residuals(_____))
+7. 
+<!-- When we fit a linear regression model, we make assumptions about the underlying relationship between the response and predictor variables. In practice, we can check that the assumptions hold by analyzing the residuals. Over the next few questions, we will examine plots of the residuals to determine if the assumptions are met. -->
+<!-- Let's begin by calculating the residuals and adding them to the dataset. Fill in the model name in the code below to add residuals to the original dataset using the `resid()` and `mutate()` functions. -->
+```{r}
+elmhurst <- elmhurst %>%
+  mutate(resid = residuals(gift_model))
 ```
 
-8. One of the assumptions for regression is that there is a linear relationship between the predictor and response variables. To check this assumption, we will examine a scatterplot of the residuals versus the predictor variable. 
+8. 
+<!-- One of the assumptions for regression is that there is a linear relationship between the predictor and response variables. To check this assumption, we will examine a scatterplot of the residuals versus the predictor variable. -->
+<!-- Create a scatterplot with the predictor variable on the *x* axis and residuals on the *y* axis. Be sure to include an informative title and properly label the axes.  -->
+```{r}
+ggplot(data = elmhurst, aes(x = family_income, y = resid)) + 
+  geom_point() + 
+  labs(title = "Residuals vs Family Income")
+```
 
-Create a scatterplot with the predictor variable on the *x* axis and residuals on the *y* axis. Be sure to include an informative title and properly label the axes. 
+9. 
+<!-- Examine the plot from the previous question to assess the linearity condition.   -->
+    <!-- - *Ideally, there would be no discernible shape in the plot. This is an indication that the linear model adequately describes the relationship between the response and predictor, and all that is left is the random error that can't be accounted for in the model, i.e. other things that affect gift aid besides family income.* -->
+    <!-- - *If there is an obvious shape in the plot (e.g. a parabola), this means that the linear model does not adequately describe the relationship between the response and predictor variables.* -->
+<!-- Based on this, is the linearity condition is satisfied? Briefly explain your reasoning.  -->
+The linearity condition is satisfied because there is no discernible shape or patterns in the plot.
 
-9. Examine the plot from the previous question to assess the linearity condition.  
-
-    - *Ideally, there would be no discernible shape in the plot. This is an indication that the linear model adequately describes the relationship between the response and predictor, and all that is left is the random error that can't be accounted for in the model, i.e. other things that affect gift aid besides family income.*
-    - *If there is an obvious shape in the plot (e.g. a parabola), this means that the linear model does not adequately describe the relationship between the response and predictor variables.*
-
-Based on this, is the linearity condition is satisfied? Briefly explain your reasoning. 
-
-10. Recall that when we fit a regression model, we assume for any given value of $x$, the $y$ values follow the Normal distribution with mean $\beta_0 + \beta_1 x$ and variance $\sigma^2$. We will look at two sets of plots to check that this assumption holds.
-
-    We begin by checking the constant variance assumption, i.e that the variance of $y$ is approximately equal for each value of $x$. To check this, we will use the scatterplot of the residuals versus the predictor variable $x$. Ideally, as we move from left to right, the spread of the $y$'s will be approximately equal, i.e. there is no "fan" pattern.
-
-    Using the scatterplot from Exercise 8 , is the constant variance assumption satisfied? Briefly explain your reasoning. *Note: You don't need to know the value of $\sigma^2$ to answer this question.*
+10. 
+<!-- Recall that when we fit a regression model, we assume for any given value of $x$, the $y$ values follow the Normal distribution with mean $\beta_0 + \beta_1 x$ and variance $\sigma^2$. We will look at two sets of plots to check that this assumption holds. -->
+<!-- We begin by checking the constant variance assumption, i.e that the variance of $y$ is approximately equal for each value of $x$. To check this, we will use the scatterplot of the residuals versus the predictor variable $x$. Ideally, as we move from left to right, the spread of the $y$'s will be approximately equal, i.e. there is no "fan" pattern. -->
+<!-- Using the scatterplot from Exercise 8 , is the constant variance assumption satisfied? Briefly explain your reasoning. *Note: You don't need to know the value of $\sigma^2$ to answer this question.* -->
+Yes the constant variance assumption is satisfied, The spread in the points appear constant as we move from left to right on the plot.
 
 
-11. Next, we will assess with Normality assumption, i.e. that the distribution of the $y$ values is Normal at every value of $x$. In practice, it is impossible to check the distribution of $y$ at every possible value of $x$, so we can check whether the assumption is satisfied by looking at the overall distribution of the residuals. The assumption is satisfied if the distribution of residuals is approximately Normal, i.e. unimodal and symmetric.
+11. 
+<!-- Next, we will assess with Normality assumption, i.e. that the distribution of the $y$ values is Normal at every value of $x$. In practice, it is impossible to check the distribution of $y$ at every possible value of $x$, so we can check whether the assumption is satisfied by looking at the overall distribution of the residuals. The assumption is satisfied if the distribution of residuals is approximately Normal, i.e. unimodal and symmetric. -->
+<!-- Make a histogram of the residuals. Based on the histogram, is the Normality assumption satisfied? Briefly explain your reasoning.  -->
+```{r warning = FALSE}
+ggplot(data = elmhurst, aes(x = resid)) +
+  geom_histogram() + 
+  labs(title = "Residuals")
+```
 
-    Make a histogram of the residuals. Based on the histogram, is the Normality assumption satisfied? Briefly explain your reasoning. 
+The residual histogram seems like it follows a normal distribution. Therefore, the normality Assumption is satisfied.
+
 
 12. The final assumption is that the observations are independent, i.e. one observation does not affect another. We can typically make an assessment about this assumption using a description of the data. Do you think the independence assumption is satisfied? Briefly explain your reasoning. 
 
